# news-brief-generator

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  supervisord.conf
.github/: pull_request_template.md
.github/workflows/: deploy.yml  release.yml
agents/contextualist_agent/: main.py
agents/publisher_agent/: main.py
agents/scout_agent/: main.py
mcp-servers/finance-monitor/: server.py
mcp-servers/media-engine/: server.py
mcp-servers/world-data/: server.py
nginx/: nginx.compose.conf  nginx.conf
protocol/: post_office.py
ui/: agents.py  app.py  components.py  utils.py
ui/backend/: main.py
ui/frontend/: index.html  package-lock.json  package.json  vite.config.js
ui/frontend/src/: App.css  App.jsx
ui/frontend/src/components/: Article.jsx  ContextTiles.jsx  Header.jsx  ImageDisplay.jsx  ProgressLog.jsx  TopicInput.jsx
